# prompt-experiment

./: HED_vocab_reformatted.xml  README.md  hed_schema.json  main.py  prompt_experiment.ipynb  pyproject.toml
prompt_experiments/: experiment_0.json  experiment_1.json  experiment_2.json  experiment_3.json  experiment_4.json  experiment_5.json  experiment_6.json  experiment_7.json
web/: README.md  app.py  requirements.txt
web/static/: script.js  style.css
web/templates/: index.html
